add hotkeys and new chants

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,61 @@
 /* Light, minimal typography-first layout */
+/* Webfonts: Noto Sans */
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-italic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-500.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-500italic.woff2") format("woff2");
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-600.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-600italic.woff2") format("woff2");
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("./fonts/noto-sans-v41-latin/noto-sans-v41-latin-700.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --bg: #f9fafb;
   --fg: #0f172a;
